--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "app": "node code-breaker.js"
+    "code": "node code-breaker.js",
+    "serve": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.2.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "logger": "^0.0.1",
+    "morgan": "^1.10.0"
   }
 }
