--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "jest --coverage",
     "code": "node code-breaker.js",
-    "serve": "node app.js"
+    "serve": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.2.0"
+    "jest": "^27.2.0",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "cors": "^2.8.5",
