--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,13 @@
 version: 2.1
+
+orbs:
+  heroku: circleci/heroku@1.2.6
+
 executors:
   my-custom-executor:
     docker:
       - image: cimg/node:lts
-      
+
 jobs:
   run-my-test:
     executor: my-custom-executor
@@ -17,3 +21,4 @@ workflows:
   my-custom-workflow:
     jobs:
       - run-my-test
+      - heroku/deploy-via-git
